--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -394,6 +394,42 @@ footer {
   color: #42b132;
 }
 
+@media screen and (max-width: 391px) {
+    .main-cars {
+        width: 315px;
+        padding-top: 25px;
+    }
+    .shop-now{
+        bottom: 0px;
+        left: 200px;
+    }
+    .tesla{
+        margin-bottom: 25px;
+    }
+    .rimac{
+        margin-left: -38px;
+    }
+    .long-bmw{
+        height: 310px;
+    }
+    .bmw-discount{
+        bottom: 0px;
+        right: 241px;
+    }
+    .bmw-shop-now{
+        bottom: 0;
+        right: 20px;
+    }
+    .rr-discount{
+        bottom: 0;
+        right: 215px;
+    }
+    .rr-shop-now{
+        bottom: 0;
+        right: 15px;
+    }
+}
+
 @media screen and (min-width: 640px) {
   .slider_wrapper .splide {
     padding: 0 4rem;
@@ -419,6 +455,10 @@ footer {
     .long-bmw {
         height: 230px;
     }
+    .bmw-discount {
+        bottom: 0px;
+        right: 196px;
+    }
     .bmw-shop-now {
         bottom: 0px;
         right: 20px;
@@ -427,6 +467,10 @@ footer {
         bottom: 0px;
         right: 20px;
     }
+    .rr-discount {
+        bottom: 0px;
+        right: 165px;
+}
     }
 
 @media screen and (max-width: 400px) {
@@ -470,3 +514,4 @@ footer {
     }
 }
 }
+
