--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -394,9 +394,9 @@ footer {
   color: #42b132;
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 391px) {
     .main-cars {
-        width: 315px;
+        width: 295px;
         padding-top: 25px;
     }
     .shop-now{
@@ -410,7 +410,8 @@ footer {
         margin-left: -38px;
     }
     .long-bmw{
-        height: 310px;
+        width: 93%;
+        height: 250px;
     }
     .bmw-discount{
         bottom: 0px;
@@ -418,7 +419,7 @@ footer {
     }
     .bmw-shop-now{
         bottom: 0;
-        right: 20px;
+        right: 45px;
     }
     .rr-discount{
         bottom: 0;
@@ -426,7 +427,7 @@ footer {
     }
     .rr-shop-now{
         bottom: 0;
-        right: 15px;
+        right: 45px;
     }
 }
 
@@ -449,7 +450,7 @@ footer {
         left: 160px;
     }
     .main-cars {
-        width: 280px;
+        width: 270px;
         margin-top: 25px;
     }
     .long-bmw {
